[package]
name = "extfn"
version = "0.1.3"
edition = "2021"
rust-version = "1.72"
categories = ["rust-patterns"]
keywords = ["macro", "trait", "extension", "extension-functions"]
description = "Call any freestanding function as `a.foo(b)` instead of `foo(a, b)` just by adding `#[extfn]` and renaming the first parameter to `self`."
repository = "https://github.com/ondt/extfn"
homepage = "https://github.com/ondt/extfn"
documentation = "https://docs.rs/extfn"
license = "MIT OR Apache-2.0"
readme = "README.md"
include = [
	"examples/demo.rs",
	"src/lib.rs",
	"tests/signatures.rs",
	"Cargo.toml",
	"LICENSE-APACHE",
	"LICENSE-MIT",
	"README.md",
]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "printing", "visit-mut", "visit"] }
proc-macro2 = "1.0"
quote = "1.0"
